--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,1 +1,11 @@
 @import 'bootstrap'
+
+.container-fluid
+  max-width: 1600px
+
+.alert
+  margin-top: 20px
+  margin-bottom: 0
+
+.content
+  margin-top: 20px
