--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,5 @@
 @import 'bootstrap'
+@import 'rails_bootstrap_forms'
 
 .container-fluid
   max-width: 1600px
@@ -9,3 +10,7 @@
 
 .content
   margin-top: 20px
+
+input[type="file"]
+  display: block
+  margin-bottom: .5rem
